--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "lasserafn/php-initials": "^2.20",
+        "maatwebsite/excel": "^3.1",
         "twilio/sdk": "^5.31"
     },
     "require-dev": {
