--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^1.0",
         "lasserafn/php-initials": "^2.20",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^1.1",
         "twilio/sdk": "^5.31"
     },
     "require-dev": {
