--- a/package.json
+++ b/package.json
@@ -13,13 +13,23 @@
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "ioredis": "^3.2.2",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
+        "redis": "^2.8.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "socket.io": "^2.1.1",
+        "socket.io-client": "^2.0.4",
+        "vue": "^2.5.17",
+        "vue-socket.io": "^2.1.1",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "toastr": "^2.1.4",
+        "vue-toastr-2": "0.0.10"
     }
 }
