--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "lasserafn/php-initials": "^2.20",
         "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^4.0",
         "twilio/sdk": "^5.31"
     },
     "require-dev": {
