--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /vendor
 /public/ckfinder/userfiles/files
 /public/ckfinder/userfiles
+/public/ckfinder/userfiles/.ckfinder/cache
 .env
 .phpunit.result.cache
 Homestead.json
